[tool.poetry]
name = "reddit-echo-chambers-analysis"
version = "1.0"
description = ""
authors = ["M Aloiso <**@**.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
numpy = "^1.24.3"
plotly = "^5.14.1"
praw = "^7.7.0"
ipykernel = "^6.23.1"
pmaw = "^3.0.0"
zstandard = "^0.21.0"
gensim = "^4.3.1"
nltk = "^3.8.1"
textblob = "^0.17.1"
wordcloud = "^1.9.2"
nbformat = "^5.9.0"
seaborn = "^0.12.2"
black = "^23.3.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
